# spc-ai-pos

./: .env.example  .gitignore  AGENTS.md  ATTRIBUTIONS.md  LICENSE  README.md  check-poc-health.sh  check-production-screen.md  docker-compose.yml  final_verify_1200.yml  hq-snapshot-1.md  hq-snapshot-expanded.md  modal-snapshot.md  page-snapshot.yml  screenshot-production-initial.md  snapshot-verification.md  ui-ai-performance-promo.md  ui-alarm-final.md  ui-overview-fresh.md  ui-performance-final.md  ui-snapshot-1300.md  ui-snapshot-1700.md  ui-snapshot-fix1600-page2.md  ui-snapshot-fix1600-page8.md  ui-snapshot-fix1600.md  ui_1200.yml  ui_1200_2.yml  ui_ai_realtime_final.yml  ui_check_final.yml  ui_dash_final.yml  ui_final_report.yml  ui_realtime_1200_loaded.yml
backend/: .dockerignore  .env.example  .env.postgres.example  .env.postgres.example.legacy_root  .env.postgres.round1.example  .gitignore  Dockerfile  README.md  add_needs_attention.py  alembic.ini  compileall_with_workarounds.py  config.py  docker-compose.yml  main.py  pyproject.toml  test_priority_validation.py
backend/agents/: chat_agent.py  ordering.py  production.py  sales_analysis.py
backend/alembic/: env.py
backend/alembic_legacy_root/: env.py
backend/api/: __init__.py  admin.py  chat.py  home.py  hq_ai.py  inventory.py  modal.py  notice.py  notifications.py  order.py  sales.py  settings.py
backend/app/: __init__.py  config.py  database.py  demo_store_config.py  dependencies.py  main.py
backend/config/: events.json
backend/core/: agent_loop.py  classifier.py  fast_path.py  formatter.py  (+3 more)
(+317 files in other folders)
