[tool.poetry]
name = "foxpos-backend"
version = "0.1.0"
description = "FoxPOS backend service — BR Korea POS AI assistant PoC"
authors = ["Power-xc"]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "tools" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.34" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.30"
alembic = "^1.14"
pydantic = "^2.0"
pydantic-settings = "^2.0"
redis = "^5.0"
apscheduler = "^3.10"
httpx = "^0.28"
python-dotenv = "^1.0"
sse-starlette = "^2.0"
pandas = "^2.2"
openpyxl = "^3.1"
openai = ">=1.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
